--- a/static/css/my-app.css
+++ b/static/css/my-app.css
@@ -1,7 +1,20 @@
 
 
+#tm-page-header {
+    height: 60px;
+    background-color: #cfd;
+    line-height: 40px;
+    padding: 10px 0px;
+    font-weight: bold;
+}
+
+
 .form-tag {
     display: inline-block;
+}
+
+.tm-tran-table .form-tag {
+    margin-bottom: 0px;
 }
 
 .div-tags {
@@ -17,12 +30,17 @@
 }
 
 
-.div-tags input {
+.div-tags input, .tm-tag-list input {
     border: none;
     box-shadow: none;
     display: inline;
     height: 20px;
 }
+
+.tm-tran-table .tm-tag-list {
+    font-size: smaller;
+}
+
 
 tr.div-tags td.tm-tag-list {
     /* to align it with the .div-tags <input> */
@@ -95,12 +113,13 @@ tr td.new-tran-ispending {
     color: #b00;
 }
 
-.tm-account-list, .tm-tran-list {
+.tm-portal {
     border: solid 1px #ddd;
     padding: 0 10px;
     border-radius: 5px;
     margin-top: 40px;
 }
+
 
 .tm-account-list [tm-is-debit=true] {
     color: #b00;
