--- a/static/templates/new-tran-tr.html
+++ b/static/templates/new-tran-tr.html
@@ -2,10 +2,16 @@
     scope deps:
         $scope.tran
         $scope.tags
+
 -->
 <tr>
+    <td>
+        <form class="div-tags div-ack" ng-controller="TranAckFormController" >
+            <button class="btn btn-info btn-sm" ng-click="ackTran(tran._id)">ack</button>
+        </form>
+    </td>
     <td ng-bind="tran.date"></td>
-    <td tm-is-debit="{{tran.isDebit}}" tm-is-transfer="{{tran.isTransfer}}" ng-bind="tran.amount"></td>
+    <td tm-is-debit="{{tran.isDebit || tran.isTransfer}}" tm-is-transfer="{{tran.isTransfer}}" ng-bind="tran.amount"></td>
     <td class="new-tran-ispending">{{ (tran.isPending) ? "(pend)" : "" }}</td>
     <td ng-bind="tran.merchant"></td>
     <td>{{tran.account}}</td>
