tran totals and paging

--- a/static/templates/new-tran-th.html
+++ b/static/templates/new-tran-th.html
@@ -1,7 +1,7 @@
 <tr>
     <th></th> <!-- ACK button -->
     <th>Date</th>
-    <th>Amount</th>
+    <th class="text-right">Amount</th>
     <th></th> <!-- (pending) -->
     <th>Merchant</th>
     <th>Account</th>
