--- a/static/css/my-app.css
+++ b/static/css/my-app.css
@@ -9,6 +9,11 @@
     font-size: 24px;
 }
 
+#tm-page-footer {
+    height: 60px;
+}
+
+
 a:hover {
     text-decoration: none;
     color: #aaa;
@@ -22,6 +27,10 @@ a:hover {
 h3 {
     background-color: #eff;
     padding: 10px;
+}
+
+.tm-portal h3:first-child {
+    margin-top: 0px;
 }
 
 .form-tag {
@@ -132,7 +141,7 @@ tr td.new-tran-ispending {
 
 .tm-portal {
     border: solid 1px #ddd;
-    padding: 0 10px;
+    padding: 10px;
     border-radius: 5px;
     margin-top: 40px;
 }
@@ -143,7 +152,7 @@ tr td.new-tran-ispending {
 }
 
 
-tr.tm-account-list-total {
+tr.tm-account-list-total tr.tm-list-totals {
     border-top: solid 2px black;
 }
 
