--- a/static/templates/tran-th.html
+++ b/static/templates/tran-th.html
@@ -1,6 +1,6 @@
 <tr>
     <th>Date</th>
-    <th>Amount</th>
+    <th class="text-right">Amount</th>
     <th></th> <!-- (pending) -->
     <th>Merchant</th>
     <th>Account</th>
