--- a/static/templates/tran-tr.html
+++ b/static/templates/tran-tr.html
@@ -5,9 +5,9 @@
 -->
 <tr>
     <td ng-bind="tran.date"></td>
-    <td tm-is-debit="{{tran.isDebit}}" tm-is-transfer="{{tran.isTransfer}}" ng-bind="tran.amount"></td>
+    <td class="text-right" tm-is-debit="{{tran.isDebit}}" tm-is-transfer="{{tran.isTransfer}}" ng-bind="tran.amount"></td>
     <td class="new-tran-ispending">{{ (tran.isPending) ? "(pend)" : "" }}</td>
-    <td ng-bind="tran.merchant"></td>
+    <td ng-bind="tran.merchant" data-toggle="tooltip" title="{{tran.omerchant}}"></td>
     <td>{{tran.account}}</td>
     <td class="tm-tag-list" ng-controller="TagFormController">
         <span ng-repeat="tag in tran.tags" class="span-tag">
