--- a/static/templates/tran-tr.html
+++ b/static/templates/tran-tr.html
@@ -17,7 +17,7 @@
         <form class="form-tag" ng-submit="onFormSubmit()" >
             <input type="text" 
                    id="input-tag-{{tran._id}}"
-                   class="input-tag form-control input-sm" 
+                   class="tm-input-tag form-control input-sm" 
                    pu-elastic-input 
                    style="min-width: 60px; max-width: 150px;"
                    ng-model="inputTag" 
