--- a/static/templates/account-tr.html
+++ b/static/templates/account-tr.html
@@ -2,13 +2,19 @@
     deps: 
         $scope.account 
         $scope.DateUtils 
+        $scope.MiscUtils
 -->
 <tr>
     <td class="text-right"
         tm-is-debit='{{ (account.accountType == "credit") }}' 
         tm-account-type="{{account.accountType}}" 
         ng-bind="account.currentBalance | currency"></td>
-    <td><a href="account.html#?accountId={{account.accountId}}">{{account.fiName}} - {{account.accountName}}</a></td>
+    <td>
+        <a href="account.html#?accountId={{account.accountId}}">{{account.fiName}} - {{account.accountName}}</a>
+        <span class="tm-account-due-amt" ng-if="MiscUtils.isDefined(account.dueAmt) && account.dueAmt > 0">
+            (<b>Due: </b>{{account.dueAmt | currency }} on {{account.dueDate}})
+        </span>
+    </td>
     <td class="text-right" tm-is-debit='{{ account.last7days < 0 }}'>{{ account.last7days | currency }}</td>
     <td class="text-right" tm-is-debit='{{ account.last30days < 0 }}'>{{ account.last30days | currency }}</td>
     <td class="text-right" tm-is-debit='{{ account.last90days < 0 }}'>{{ account.last90days | currency }}</td>
