--- a/static/templates/tran-tr.html
+++ b/static/templates/tran-tr.html
@@ -7,7 +7,8 @@
     <td ng-bind="tran.date"></td>
     <td class="text-right" tm-is-debit="{{tran.isDebit}}" tm-is-transfer="{{tran.isTransfer}}" ng-bind="tran.amount"></td>
     <td class="new-tran-ispending">{{ (tran.isPending) ? "(pend)" : "" }}</td>
-    <td ng-bind="tran.merchant" data-toggle="tooltip" title="{{tran.omerchant}}"></td>
+    <!-- td ng-bind="tran.merchant" data-toggle="tooltip" title="{{tran.omerchant}}"></td -->
+    <td><span data-toggle="tooltip" title="{{tran.omerchant}}">{{ tran.merchant }}<span><span class="tm-resolved-pending-tran" ng-if="MiscUtils.isDefined(tran.pendingTran)">({{tran.pendingTran.amount}} on {{tran.pendingTran.date}})</span></td>
     <td>{{tran.account}}</td>
     <td class="tm-tag-list" ng-controller="TagFormController">
         <span ng-repeat="tag in tran.tags" class="span-tag">
