--- a/static/templates/account-tr.html
+++ b/static/templates/account-tr.html
@@ -15,10 +15,10 @@
             (<b>Due: </b>{{account.dueAmt | currency }} on {{account.dueDate}})
         </span>
     </td>
-    <td class="text-right" tm-is-debit='{{ account.last7days < 0 }}'>{{ account.last7days | currency }}</td>
-    <td class="text-right" tm-is-debit='{{ account.last30days < 0 }}'>{{ account.last30days | currency }}</td>
-    <td class="text-right" tm-is-debit='{{ account.last90days < 0 }}'>{{ account.last90days | currency }}</td>
-    <td class="text-right" tm-is-debit='{{ account.last365days < 0 }}'>{{ account.last365days | currency }}</td>
+    <td class="text-right" tm-is-debit='{{ account.last7days < 0 }}'>{{ account.last7days | currency:"$":0 }}</td>
+    <td class="text-right" tm-is-debit='{{ account.last30days < 0 }}'>{{ account.last30days | currency:"$":0 }}</td>
+    <td class="text-right" tm-is-debit='{{ account.last90days < 0 }}'>{{ account.last90days | currency:"$":0 }}</td>
+    <td class="text-right" tm-is-debit='{{ account.last365days < 0 }}'>{{ account.last365days | currency:"$":0 }}</td>
     <td>{{ DateUtils.formatEpochAsDate(account.fiLastUpdated) }}</td>
 </tr>
 
