--- a/static/templates/tran-chart.html
+++ b/static/templates/tran-chart.html
@@ -8,6 +8,6 @@
         <div class="tm-tran-canvas-thinking" > 
             <img src="icons/thinking.gif" ng-if="isChartThinking"/>
         </div>
-        <canvas id="tm-tran-canvas-element" width="1000" height="350"></canvas>
+        <canvas tm-chart-data="tranChartData" width="1000" height="350"></canvas>
     </div>
 </div>
