--- a/static/templates/account-time-series-chart.html
+++ b/static/templates/account-time-series-chart.html
@@ -5,7 +5,7 @@
         <div class="tm-tran-canvas-thinking" > 
             <img src="icons/thinking.gif" ng-if="isChartThinking"/>
         </div>
-        <canvas id="tm-account-time-series-chart" width="1000" height="350"></canvas>
+        <canvas tm-chart-data="chartData" width="1000" height="350"></canvas>
     </div>
 </div>
 
