--- a/static/templates/tran-tr.html
+++ b/static/templates/tran-tr.html
@@ -21,7 +21,7 @@
                    pu-elastic-input 
                    style="min-width: 60px; max-width: 150px;"
                    ng-model="inputTag" 
-                   tm-auto-fill="tags"
+                   tm-auto-fill="tags | orderBy"
                    placeholder="+"
                    autocomplete="off" />
         </form>
